turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:15: error: '=>' expected but ';' found.
	case 2 gauche(); baisseBrosse(); leveBrosse();
                       ^Turmite:16: error: '=>' expected but ';' found.
	case 4 droite();droite(); baisseBrosse(); leveBrosse();
                       ^Turmite:17: error: '=>' expected but ';' found.
	case 8 droite(); baisseBrosse(); leveBrosse();
                       ^Turmite:18: error: '=>' expected but ';' found.
	case 1 baisseBrosse(); leveBrosse();
                             ^Turmite:19: error: illegal start of simple pattern
	case 0 C=false;
                ^Turmite:19: error: '=>' expected but ';' found.
	case 0 C=false;
                      ^